revision working directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
     #### expecting it in the form of
     ####   /go/src/github.com/circleci/go-tool
     ####   /go/src/bitbucket.org/circleci/go-tool
-    working_directory: /go/src/bitbucket.org/zoedaemon/covid19kalteng
+    working_directory: /go/src/covid19kalteng
     steps:
       - checkout
 
