--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
     container_name: postgres_db
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./postgres-data:/var/lib/postgresql/data
 
   adminer:
     image: adminer
