--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
     container_name: "portainer"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    command: -H unix:///var/run/docker.sock --no-auth
+    command: -H unix:///var/run/docker.sock --admin-password '$$2y$$05$$G4dP9ooT0i7gSionG0I1cu45UCwc7kFM/DUucgMDvFcd59ukrmfwS'
     ports:
       - 9000:9000
   
