--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -25,6 +25,7 @@ services:
 
   portainer:
     image: portainer/portainer
+    restart: always
     container_name: "portainer"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -34,6 +35,7 @@ services:
   
   zookeeper:
     image: bitnami/zookeeper
+    restart: always
     ports:
       - 2181:2181
     environment:
@@ -41,9 +43,12 @@ services:
       - ZOO_SERVER_USERS=covid19user
       - ZOO_SERVER_PASSWORDS=covid19pass
     container_name: covid19kalteng_zookeeper
-
+    
   kafka:
     image: bitnami/kafka
+    restart: always
+    depends_on:
+      - zookeeper
     ports:
       - 9092:9092
     environment:
