--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     ports:
       - 8001:8001
     image: covid19kalteng:development
+    restart: always
     volumes:
       - ./:/go/src/covid19kalteng
     hostname: localhost
